fixed layout issues

--- a/sign-up.html
+++ b/sign-up.html
@@ -13,8 +13,13 @@
 <body class="sign-up">
     <header>
         <div class="account-logo">
-            <img id="logo-normal" src="./images/logo.png" alt="Logo" class="logo-normal">
+            <a href="index.html" class="go-home-link">
+                <i class="fas fa-arrow-left"></i> Go Home
+            </a>
         </div>
+    <div class="logo-above-form">
+        <img id="logo-normal" src="./images/logo.png" alt="Logo" class="logo-normal">
+    </div>
     </header>
 
 
@@ -41,6 +46,8 @@
 
             <div class="sign-in-link-container">
                 <a href="sign-in.html">ALREADY HAVE AN ACCOUNT?</a>
+            </div>
+            <div class="go-home-link-container">
             </div>
         </form>
     </div>
