--- a/sign-in.html
+++ b/sign-in.html
@@ -13,18 +13,23 @@
 <body class="sign-in">
     <header>
         <div class="account-logo">
-            <img id="logo-normal" src="./images/logo.png" alt="Logo" class="logo-normal">
+            <a href="index.html" class="go-home-link">
+                <i class="fas fa-arrow-left"></i> Go Home
+            </a>
         </div>
+    <div class="logo-above-form" >
+        <img id="logo-normal" src="./images/logo.png" alt="Logo" class="logo-normal">
+    </div>
     </header>
 
 
     <div class="sign-in-form">
         <form id="signInForm" action="#" method="post">
             <h3>Sign in</h3>
-            <label for="username">USERNAME:</label>
+            <label for="username">Username:</label>
             <input type="text" id="name" name="name" required>
 
-            <label for="password">PASSWORD:</label>
+            <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
 
             <div class="sign-in-button-container">
@@ -35,6 +40,8 @@
             
             <div class="sign-up-link-container">
                 <a href="sign-up.html">NO ACCOUNT YET?</a>
+            </div>
+            <div class="go-home-link-container">
             </div>
         </form>
     </div>
