fixed about page

--- a/about.html
+++ b/about.html
@@ -79,6 +79,30 @@
             </ul>
         </div>
     </div>
+    <div id="game-images">
+      <div id="placeholder-container">
+        <div class="image-wrapper">
+          <a href="ctd.html">
+          <img class="placeholder-image" src="./images/ctd.png" alt="Image 1">
+            <p>New tower defense game out now</p>
+          </a>
+        </div>
+        <div class="image-wrapper">
+          <a href="relic.html">
+          <img class= "placeholder-image" src="./images/relic.png" alt="Image 2">
+            <p>Upcoming game updates for Relic soon</p>
+          </a>
+        </div>
+      </div>
+      <div id="game-container">
+        <img id="itw-image" class="game-image" src="./images/itw.png" alt="Game 1 Image">
+        <img id="relic-image" class="game-image" src="./images/relic.png" alt="Game 2 Image">
+        <img id="hv-image" class="game-image" src="./images/hv.png" alt="Game 3 Image">
+        <img id="cadence-image" class="game-image" src="./images/cadence.png" alt="Game 4 Image">
+        <img id="bo-image" class="game-image" src="./images/bo.png" alt="Game 5 Image">
+        <img id="ctd-image" class="game-image" src="./images/ctd.png" alt="Game 6 Image">
+      </div>
+    </div>
 
     <footer>
         <div class="footer-content">
