fixed about page

--- a/about.html
+++ b/about.html
@@ -41,6 +41,54 @@
                             </ul>
                           </div>
                         </div>
+                        <div id="game-images">
+                          <div id="placeholder-container">
+                            <div class="image-wrapper">
+                              <a href="ctd.html">
+                                <picture>
+                                  <source srcset="./images/ctd.webp" type="image/webp">
+                                  <img class="placeholder-image" src="./images/ctd.png" alt="Image 1">
+                                </picture>
+                                <p>New tower defense game out now</p>
+                              </a>
+                            </div>
+                            <div class="image-wrapper">
+                              <a href="relic.html">
+                                <picture>
+                                  <source srcset="./images/relic.webp" type="image/webp">
+                                  <img class="placeholder-image" src="./images/relic.png" alt="Image 2">
+                                </picture>
+                                <p>Upcoming game updates for Relic soon</p>
+                              </a>
+                            </div>
+                          </div>
+                          <div id="game-container">
+                            <picture>
+                              <source srcset="./images/itw.webp" type="image/webp">
+                              <img id="itw-image" class="game-image" src="./images/itw.png" alt="Game 1 Image">
+                            </picture>
+                            <picture>
+                              <source srcset="./images/relic.webp" type="image/webp">
+                              <img id="relic-image" class="game-image" src="./images/relic.png" alt="Game 2 Image">
+                            </picture>
+                            <picture>
+                              <source srcset="./images/hv.webp" type="image/webp">
+                              <img id="hv-image" class="game-image" src="./images/hv.png" alt="Game 3 Image">
+                            </picture>
+                            <picture>
+                              <source srcset="./images/cadence.webp" type="image/webp">
+                              <img id="cadence-image" class="game-image" src="./images/cadence.png" alt="Game 4 Image">
+                            </picture>
+                            <picture>
+                              <source srcset="./images/bo.webp" type="image/webp">
+                              <img id="bo-image" class="game-image" src="./images/bo.png" alt="Game 5 Image">
+                            </picture>
+                            <picture>
+                              <source srcset="./images/ctd.webp" type="image/webp">
+                              <img id="ctd-image" class="game-image" src="./images/ctd.png" alt="Game 6 Image">
+                            </picture>
+                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -78,30 +126,6 @@
                 <li><a href="bo.html">Blood Oath</a></li>
             </ul>
         </div>
-    </div>
-    <div id="game-images">
-      <div id="placeholder-container">
-        <div class="image-wrapper">
-          <a href="ctd.html">
-          <img class="placeholder-image" src="./images/ctd.png" alt="Image 1">
-            <p>New tower defense game out now</p>
-          </a>
-        </div>
-        <div class="image-wrapper">
-          <a href="relic.html">
-          <img class= "placeholder-image" src="./images/relic.png" alt="Image 2">
-            <p>Upcoming game updates for Relic soon</p>
-          </a>
-        </div>
-      </div>
-      <div id="game-container">
-        <img id="itw-image" class="game-image" src="./images/itw.png" alt="Game 1 Image">
-        <img id="relic-image" class="game-image" src="./images/relic.png" alt="Game 2 Image">
-        <img id="hv-image" class="game-image" src="./images/hv.png" alt="Game 3 Image">
-        <img id="cadence-image" class="game-image" src="./images/cadence.png" alt="Game 4 Image">
-        <img id="bo-image" class="game-image" src="./images/bo.png" alt="Game 5 Image">
-        <img id="ctd-image" class="game-image" src="./images/ctd.png" alt="Game 6 Image">
-      </div>
     </div>
 
     <footer>
